compiler/testData/checkerWithErrorTypes/quick/shadowing/ShadowParameterInFunctionBody.jet

fun f(p: Int): Int {
    val <!NAME_SHADOWING!>p<!> = 2
    return p
}
